--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@angular/animations": "4.1.3",
+		"@angular/cdk": "^2.0.0-beta.8",
 		"@angular/cli": "^1.1.0-rc.2",
 		"@angular/common": "4.1.3",
 		"@angular/compiler": "4.1.3",
